# agent-xp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
patterns/react/: agent.py  summary_prompt.md  system_prompt.md
tools/: base_tool.py  calculator.py  web_search.py
